@@ -18,7 +18,7 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-FROM ubuntu:18.04
+FROM ubuntu:18.10
 
 # Set locale to prevent UTF-8 errors
 ENV LANG C.UTF-8
